--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             At culpa modi placeat ratione deserunt!
             Nisi, voluptatibus ipsum?</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="https://github.com/SyedJazim58"><i class='bx bxl-github' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
                 <a href="#"><i class='bx bxl-facebook-circle'></i></a>
