--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="#" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/home.png" alt="">
+            <img src="images/my image.jpg" alt="">
         </div>
     </section>
     <section class="about" id="about">
