--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="social-media">
                 <a href="https://github.com/SyedJazim58"><i class='bx bxl-github' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://x.com/SyedJazim1304"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.facebook.com/syedjazim.hassan"><i class='bx bxl-facebook-circle'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
