--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             At culpa modi placeat ratione deserunt!
             Nisi, voluptatibus ipsum?</p>
             <div class="social-media">
-                <a href="https://github.com/SyedJazim58"><i class='bx bxl-github' ></i></a>
+                <a href="https://github.com/SyedJazim58" target="_blank"><i class='bx bxl-github' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://x.com/SyedJazim1304"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.facebook.com/syedjazim.hassan"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://x.com/SyedJazim1304" target="_blank"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.facebook.com/syedjazim.hassan" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
