--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Nisi, voluptatibus ipsum?</p>
             <div class="social-media">
                 <a href="https://github.com/SyedJazim58" target="_blank"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.linkedin.com/in/syed-jazim-hassan-558706292/"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://x.com/SyedJazim1304" target="_blank"><i class='bx bxl-twitter'></i></a>
                 <a href="https://www.facebook.com/syedjazim.hassan" target="_blank"><i class='bx bxl-facebook-circle'></i></a>
             </div>
